fix: resolve zna format on mobile breakpoint

--- a/src/components/ZNALink/ZNALink.module.scss
+++ b/src/components/ZNALink/ZNALink.module.scss
@@ -72,17 +72,14 @@
 		content: '';
 	}
 
-	.ZNALink > a:nth-last-child(1) {
-		display: block !important;
-		content: '';
-
-		&:before {
-			content: '..' !important;
-		}
-	}
-
 	.isRootWithSubdomain {
-		a:not(:first-of-type) ~ a:last-of-type::before {
+		&.isNetworkSet {
+			a:not(:first-of-type) ~ a:last-of-type::before {
+				content: '..';
+			}
+		}
+
+		a:not(:first-of-type):not(:nth-of-type(2)) ~ a:last-of-type::before {
 			content: '..';
 		}
 	}
